- ServiceInfo中增加了ProviderName，标识不同的服务提供方